Change index hero slide tag display from none to block to ensure visibility in the hero slider component.

--- a/resources/css/components/index-hero-slider.scss
+++ b/resources/css/components/index-hero-slider.scss
@@ -300,7 +300,7 @@
   }
 
   .index-hero__slide_tag {
-    display: none;
+    display: block;
     position: relative;
     padding-left: 16px;
     background: none;
